Working on: Make post body in the same way readable as Safari's reader view (Issue #6)

--- a/assets/scss/framework/design/typography/scale/scale.scss
+++ b/assets/scss/framework/design/typography/scale/scale.scss
@@ -33,7 +33,7 @@ $left-mobile: $lem;
     }
 
     @include desktop {
-      font-size: 140%;
+      font-size: 160%;
     }
   }
 
