--- a/assets/scss/theme/post-footer/post-footer.scss
+++ b/assets/scss/theme/post-footer/post-footer.scss
@@ -53,7 +53,7 @@
   .categories-and-tags,
   .date-and-author,
   .post-edit-link {
-    padding: $lem;
+    padding: $top $left;
   }
 
   .date-and-author + .categories-and-tags,
